ianpaschal/combat-command#296 Fix <Select/> overflow on mobile

--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -9,6 +9,8 @@
 
     @include flex.row($gap: 0);
 
+    width: 100%;
+
     &-trigger {
       @include flex.row($gap: 0.5rem);
 
@@ -52,6 +54,7 @@
 
       box-sizing: border-box;
       min-width: var(--anchor-width);
+      max-height: var(--available-height, 80vh);
 
       // TODO: Animations
       // transition: transform 150ms, opacity 150ms;
@@ -71,6 +74,8 @@
     }
 
     &-list {
+      overflow-y: auto;
+      max-height: inherit;
       padding: calc(0.5rem - var(--border-width));
     }
 
